# trabalho-3-2-dna-profiler-Daniel-Lmv

./: Author.md  CMakeLists.txt  Como_Compilar.txt  README.md
data/: data2.csv  sequence2_daniel.txt  sequence2_jogador1.txt  sequence2_no_match.txt  sequence2_professor.txt
include/: dados.hpp  interface.hpp  perfil.hpp
src/: dados.cpp  interface.cpp  main.cpp  perfil.cpp
